<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Learn English </string>
    <string name="learn_words">Учить слова\t</string>
    <string name="test">Тест</string>
    <string name="dictionary">Словарь</string>
    <string name="my_words">Мои слова</string>
    <string name="settings">Настройки</string>
    <string name="learn_words_name">Учим слова</string>
    <string name="word">Слово</string>
    <string name="translate"> Word  </string>
    <string name="next_word">Дальше</string>
    <string name="count_of_words">Выберите сколько слов вам удобно изучать в день:</string>
    <string name="ru">ru</string>
    <string name="eng">eng</string>
    <string name="button_dictionary">Перевести</string>
    <string name="ruOrEng">Выберите на каком языке вы вводите слово:</string>
    <string name="enter">Введите слово</string>
    <string name="recommendation">На сегодня количество слов к изучению достигнуто,
        если вы хотите увеличить его, то сделайте это в настройках. А чтобы убедиться в том,
        что вы выучили слова - пройдите тест.</string>
    <string name="words_myWords">У вас нет выученных слов</string>
    <string name="test_1st_text">Введите перевод слова:</string>
    <string name="check">Проверить</string>
    <string name="enter_translate">Введите перевод</string>
    <string name="test_begin">Тест будет доступен после того, как вы запомните слова
        в пункте \"Учить слова\"</string>
    <string name="name_dictionary">Словарь</string>
    <string name="settings_name">Настройки</string>
    <string name="test_name">Тест</string>
    <string name="description">picture_for_menu</string>
    <string name="new_words">По новым словам</string>
    <string name="old_words">по выученным словам</string>
    <string name="first_launch">Здравствуйте, дорогой пользователь!\n\nПеред тем, как начать обучение,
        пожалуйста, выберите в настройках удобное для вас количество слов к изучению.
        После того, как вы достигните этого количества - данный пункт будет закрыт до
        следующего дня.\n\nЖелаем вам успехов!"</string>
    <string name="go_to_settings">Перейти в настройки</string>
    <string name="learn">учить</string>
    <string name="menu">Главное меню</string>
    <string name="repeat">Повтор</string>
    <string name="back_button">back_button</string>
    <string name="lock">lock</string>
    <string name="background">background</string>
    <string name="star">star</string>
</resources>
