<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkBlue"
        android:drawableTop="@drawable/logo"
        android:gravity="center"
        android:text="@string/test"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/test_1st_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_test"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text = "@string/test_begin"
        android:gravity="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/test_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/test_translate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textColor="@color/darkBlue"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/test_translate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/test_1st_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:hint="@string/test_1st_text"
        android:textColor="@color/darkBlue"
        android:visibility="invisible"
        android:textSize="20sp" />

    <Button
        android:id="@+id/test_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/test_word"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:visibility="invisible"
        android:text="@string/check" />

</RelativeLayout>