<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkBlue"
        android:drawableTop="@drawable/logo"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="20sp" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings"
        android:layout_alignStart="@id/settings"
        android:layout_alignLeft="@id/settings"
        android:scaleType="fitStart"
        android:src="@drawable/main_activity_london" />

    <Button
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/learn_words"
        android:layout_alignStart="@id/learn_words"
        android:layout_alignLeft="@id/learn_words"
        android:layout_alignEnd="@id/learn_words"
        android:layout_alignRight="@id/learn_words"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:background="@drawable/button_background"
        android:drawableStart="@drawable/test"
        android:drawableLeft="@drawable/test"
        android:text="@string/test"
        android:textSize="17sp" />

    <Button
        android:id="@+id/learn_words"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="@drawable/button_background"
        android:drawableStart="@drawable/learn_words"
        android:drawableLeft="@drawable/learn_words"
        android:gravity="center"
        android:text="@string/learn_words"
        android:textSize="17sp" />

    <Button
        android:id="@+id/my_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/test"
        android:layout_alignStart="@id/learn_words"
        android:layout_alignLeft="@id/learn_words"
        android:layout_alignEnd="@id/learn_words"
        android:layout_alignRight="@id/learn_words"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:background="@drawable/button_background"
        android:drawableStart="@drawable/my_words"
        android:drawableLeft="@drawable/my_words"
        android:text="@string/my_words"
        android:textSize="17sp" />

    <Button
        android:id="@+id/dictionary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_words"
        android:layout_alignStart="@id/learn_words"
        android:layout_alignLeft="@id/learn_words"
        android:layout_alignEnd="@id/learn_words"
        android:layout_alignRight="@id/learn_words"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:background="@drawable/button_background"
        android:drawableStart="@drawable/dictionary"
        android:drawableLeft="@drawable/dictionary"
        android:text="@string/dictionary"
        android:textSize="17sp" />

    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dictionary"
        android:layout_alignStart="@id/learn_words"
        android:layout_alignLeft="@id/learn_words"
        android:layout_alignEnd="@id/learn_words"
        android:layout_alignRight="@id/learn_words"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:background="@drawable/button_background"
        android:drawableStart="@drawable/settings"
        android:drawableLeft="@drawable/settings"
        android:text="@string/settings"
        android:textSize="17sp" />


</RelativeLayout>
