<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_dictionary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkBlue"
        android:drawableTop="@drawable/logo"
        android:gravity="center"
        android:text="@string/dictionary"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/word_dictionary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_dictionary"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:hint="@string/enter"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_dictionary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/word_dictionary"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_background"
        android:text="@string/button_dictionary" />


    <TextView
        android:id="@+id/translate_dictionary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_dictionary"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:textSize="25sp" />


</RelativeLayout>