<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkBlue"
        android:drawableTop="@drawable/logo"
        android:gravity="center"
        android:text="@string/learn_words_name"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/show_translate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/word"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/show_recommendation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/word"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/recommendation"
        android:textSize="20sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/next_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_translate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_background"
        android:drawableStart="@drawable/learn_words"
        android:drawableLeft="@drawable/learn_words"
        android:text="@string/next_word"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_recommendation"
        android:layout_marginTop="70dp"
        android:scaleType="fitCenter"
        android:src="@drawable/learn_words_park_background" />

</RelativeLayout>